--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  juo6442
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
