Remove twitter username: ...is confiedntial :)

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: > # this means to ignore newlines until "baseurl:"
   더 나은 사람이 되기 위해 노력하고 있습니다.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: juo6442
+# twitter_username:
 github_username:  juo6442
 
 # Build settings
