--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@
 title: by juo
 email: juo6442@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  더 나은 사람이 되기 위해 노력하고 있습니다.
+하고 싶은 거 합니다.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username:
-github_username:  juo6442
+github_username: juo6442
 
 # Build settings
 markdown: kramdown
@@ -32,7 +32,7 @@ plugins:
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
 exclude:
-   - Gemfile
+  - Gemfile
 #   - Gemfile.lock
 #   - node_modules
 #   - vendor/bundle/
